--- a/src/views/index.erb
+++ b/src/views/index.erb
@@ -1,8 +1,16 @@
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BokTips! </title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
 <body>
     <header>
         <h1>Skapa ditt konto</h1>
     </header>
-
     <nav class="menu">
         <ul>
             <li><h3>Info sidor</h3></li>
@@ -19,7 +27,6 @@
         </div>
     </div>
 
-
     <script src="js/allt.js"></script>    
         <form action="/my-handling-form-page" method="post">
             <div class="form-list">
@@ -32,13 +39,17 @@
                         <label for="mail">Email:</label>
                         <input type="email" id="mail" name="user_email" >
                     </li>
+                    <li>
+                        <label for="password">Lösenord:</label>
+                        <input type="Password" id="mail" name="Password" >
+                    </li>
                 </ul>
 
                 <div class="button">
                     <button type="submit" value="submit">Create account</button>
                 </div>
                 <div class="message">
-                    <p>Välkommen</p>
+                    
                 </div>
             </div>
         </form>
@@ -46,8 +57,10 @@
     </main>
 
     <footer>
-        <p></p>
-        <p></p>
+        <p>Adress:</p>
+        <p>Telefon:</p>
         <p>Mail: BokTips@mail.com</p>
     </footer>
+
+    <script src="js/allt.js"></script>
 </body>
