--- a/src/views/layout.erb
+++ b/src/views/layout.erb
@@ -6,8 +6,7 @@
     <title>BokTips</title>
 </head>
 <body>
-    <header><h1>Välkommen till BokTips</h1></header>
-    <h4>Skapa gärna ett konto!</h4>
+    <%# <header><h1>Välkommen till BokTips</h1></header> %>
     <%= yield %>
     <span></span>
 </body>
