--- a/src/views/index.erb
+++ b/src/views/index.erb
@@ -8,52 +8,54 @@
 </head>
 
 <body>
+
     <header>
         <h1>Skapa ditt konto</h1>
     </header>
-    <nav class="menu">
-        <ul>
-            <li><h3>Info sidor</h3></li>
-            <li><a href="index.html">Lite om oss</a></li>
-            <li><a href="sida2.html">Alla böcker</a></li>
-            <li><a href="sida3.html">Profil</a></li>
-        </ul>
-    </nav>
 
-    <div class="fade-layer"></div>
+
+        <div class="fade-layer"></div>
     <div class="wrapper">
         <div class="menu-button">
             <i class="material-icons">menu</i>
         </div>
     </div>
+            
+    <nav class="menu">
+        <ul>
+            <li><h3>Info sidor</h3></li>
+            <li><a href="index.html">Lite om oss</a></li>
+            <li><a href="profil/index.html">Alla böcker</a></li>
+            <li><a href="sida3.html">Profil</a></li>
+        </ul>
+    </nav>
 
     <script src="js/allt.js"></script>    
-        <form action="/my-handling-form-page" method="post">
-            <div class="form-list">
-                <ul>
-                    <li>
-                        <label for="name">Name:</label>
-                        <input type="text" id="name" name="user_name" >
-                    </li>
-                    <li>
-                        <label for="mail">Email:</label>
-                        <input type="email" id="mail" name="user_email" >
-                    </li>
-                    <li>
-                        <label for="password">Lösenord:</label>
-                        <input type="Password" id="mail" name="Password" >
-                    </li>
-                </ul>
-
-                <div class="button">
-                    <button type="submit" value="submit">Create account</button>
-                </div>
-                <div class="message">
-                    
-                </div>
+    <form action="/user" method="post">
+        <div class="form-list">
+            <ul>
+                <li>
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="user_name" >
+                </li>
+                <li>
+                    <label for="mail">Email:</label>
+                    <input type="email" id="mail" name="user_email" >
+                </li>
+                <li>
+                    <label for="password">Lösenord:</label>
+                    <input type="Password" id="mail" name="Password" >
+                </li>
+            </ul>
+            <div class="button">
+                <button type="submit" value="submit">Create account</button>
             </div>
-        </form>
-        
+            <div class="message">
+                
+            </div>
+        </div>
+    </form>
+
     </main>
 
     <footer>
