--- a/src/views/index.erb
+++ b/src/views/index.erb
@@ -30,7 +30,26 @@
     </div>  
     
     <main>
-        <form action="/user" method="post">
+        <form action="/user/login" method="post">
+            <div class="form-list">
+                <ul>
+                    <li>
+                        <label for="mail">Email:</label>
+                        <input type="email" id="mail" name="user_email" >
+                    </li>
+                    <li>
+                        <label for="password">Lösenord:</label>
+                        <input type="Password" id="mail" name="password" >
+                    </li>
+                </ul>
+                <div class="button">
+                    <button type="submit" value="submit">Login</button>
+                </div>
+                <div class="message"></div>
+            </div>
+        </form>
+
+        <form action="/user/signup" method="post">
             <div class="form-list">
                 <ul>
                     <li>
@@ -43,18 +62,20 @@
                     </li>
                     <li>
                         <label for="password">Lösenord:</label>
-                        <input type="Password" id="mail" name="Password" >
+                        <input type="Password" id="mail" name="password" >
                     </li>
                 </ul>
                 <div class="button">
                     <button type="submit" value="submit">Create account</button>
                 </div>
-                <div class="message">
-                
-                </div>
+                <div class="message"></div>
             </div>
         </form>
 
+        <div class="button">
+            <button type="submit" value="submit">Log out</button>
+        </div>
+        <div class="message"></div>
     </main>
 
     <footer>
