--- a/src/views/index.erb
+++ b/src/views/index.erb
@@ -4,85 +4,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BokTips! </title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="public/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-
-    <header>
-        <h1>Skapa ditt konto</h1>
-    </header>
-  
-    <nav class="menu"> 
-
-        <ul>
-            <li><h3>Info sidor</h3></li>
-            <li><a href="om-oss/about.erb">Lite om oss</a></li>
-            <li><a href="profil/index.html">Alla böcker</a></li>
-            <li><a href="sida3.html">Profil</a></li>
-        </ul>
-    </nav>
-    <div class="fade-layer"></div>
-    <div class="wrapper">
-        <div class="menu-button">
-            <i class="material-icons">menu</i>
-        </div>
-    </div>  
-    
+<body>    
     <main>
-        <form action="/user/login" method="post">
+        <form class="formbox" action="/user/login" method="post">
             <div class="form-list">
-                <ul>
-                    <li>
-                        <label for="mail">Email:</label>
-                        <input type="email" id="mail" name="user_email" >
-                    </li>
-                    <li>
-                        <label for="password">Lösenord:</label>
-                        <input type="Password" id="mail" name="password" >
-                    </li>
-                </ul>
-                <div class="button">
-                    <button type="submit" value="submit">Login</button>
-                </div>
-                <div class="message"></div>
+                <label for="mail">Email:</label><input type="email" id="mail" name="user_email" ><br />
+                <label for="password">Lösenord:</label><input type="Password" id="mail" name="password" ><br />
             </div>
-        </form>
 
-        <form action="/user/signup" method="post">
-            <div class="form-list">
-                <ul>
-                    <li>
-                        <label for="name">Name:</label>
-                        <input type="text" id="name" name="user_name" >
-                    </li>
-                    <li>
-                        <label for="mail">Email:</label>
-                        <input type="email" id="mail" name="user_email" >
-                    </li>
-                    <li>
-                        <label for="password">Lösenord:</label>
-                        <input type="Password" id="mail" name="password" >
-                    </li>
-                </ul>
-                <div class="button">
-                    <button type="submit" value="submit">Create account</button>
-                </div>
-                <div class="message"></div>
+            <div class="button">
+                <button type="submit" value="submit">Login</button>
             </div>
+            <div class="message"></div>
         </form>
-
-        <div class="button">
-            <button type="submit" value="submit">Log out</button>
-        </div>
-        <div class="message"></div>
+        <p>Don't have an account?<a href="/signup">Create one here</a></p>
+        <form class="formbox" action="/user/logout" method="post">
+            <div class="button">
+                <button type="submit" value="submit">Log out</button>
+            </div>
+            <div class="message"></div>
+        </form>
     </main>
 
-    <footer>
-        <p>Adress:</p>
-        <p>Telefon:</p>
-        <p>Mail: BokTips@mail.com</p>
-    </footer>
-
-    <script src="public/js/allt.js"></script>
 </body>
