--- a/src/views/layout.erb
+++ b/src/views/layout.erb
@@ -9,9 +9,10 @@
     <nav class="menu"> 
         <ul>
             <h3>Info sidor</h3>
-            <a href="om-oss/about.erb">Lite om oss</a><br />
-            <a href="bocker/index.erb">Alla böcker</a><br />
-            <a href="userpage.erb">Profil</a><br />
+            <a href="/">Start sida & log in</a><br/>
+            <a href="/about">Lite om oss</a><br />
+            <a href="/bocker">Alla böcker</a><br />
+            <a href="/user">Profil</a><br />
         </ul>
     </nav>
 
