--- a/src/views/bocker.erb
+++ b/src/views/bocker.erb
@@ -4,6 +4,8 @@
           <h2> <a href="/bocker/<%=bok['id']%>"><%= bok['name'] %></a></h2>
       <% end%>
     <p><a href="/bocker">Show me all bocker!</a></p>
+     <button type='submit'>
+    <p><a href="/bocker/add_new">Add another book</a></p> </button> </form>
   <% else %>
     <p>No books found.</p>
   <% end %>
