Mapp struktur fixad

--- a/src/views/bocker/new.erb
+++ b/src/views/bocker/new.erb
@@ -6,7 +6,7 @@
 
     button {
       border: 2px solid darkred;
-      color: white;
+      color: purple;
       padding: 10px 10px;
       border-radius: 30px;
       cursor: pointer;
@@ -14,7 +14,7 @@
 
 </style>
 
-<form class="formbox" action="/bocker/add_new" method="post">
+<form class="formbox" action="/bocker/bocker/new" method="post">
     <label for="name">Name:</label><input type="text" id="name" name="name" ><br />
     <label for="name">Author:</label><input type="text" id="author" name="author" ><br />
     <label for="name">Description:</label><input type="text" id="description" name="description" ><br />
