--- a/src/views/bocker/index.erb
+++ b/src/views/bocker/index.erb
@@ -1,11 +1,11 @@
 <% if @sing == nil %>
   <% if @bocker %>
       <% @bocker.each do |bok|%>
-          <h2> <a href="/bocker/<%=bok['id']%>"><%= bok['name'] %></a></h2>
+          <h2> <a href="/bocker/index/<%=bok['id']%>"><%= bok['name'] %></a></h2>
       <% end%>
-    <p><a href="/bocker">Show me all bocker!</a></p>
+    <p><a href="/index">Show me all bocker!</a></p>
      <button type='submit'>
-    <p><a href="/bocker/add_new">Add another book</a></p> </button> </form>
+    <p><a href="/bocker/index/new">Add another book</a></p> </button> </form>
   <% else %>
     <p>No books found.</p>
   <% end %>
@@ -15,8 +15,9 @@
           <h2> <%= bok['name'] %> </h2>
           <p>Author: <%= bok['Author'] %></p>
           <p>Description: <%= bok['description'] %></p>
+          <p><a href="/comment/new">Add your comment and rating of the book!</a></p>
       <% end%>
-    <p><a href="/bocker">Show me all bocker!</a></p>
+    <p><a href="/bocker/index">Show me all bocker!</a></p>
   <% else %>
     <p>No books found.</p>
   <% end %>
