--- a/src/views/layout.erb
+++ b/src/views/layout.erb
@@ -11,7 +11,7 @@
             <h3>Info sidor</h3>
             <a href="/">Start sida & log in</a><br/>
             <a href="/about">Lite om oss</a><br />
-            <a href="/bocker">Alla böcker</a><br />
+            <a href="/bocker/index">Alla böcker</a><br />
             <a href="/user">Profil</a><br />
         </ul>
     </nav>
