--- a/src/views/bocker/index.erb
+++ b/src/views/bocker/index.erb
@@ -3,9 +3,9 @@
       <% @bocker.each do |bok|%>
           <h2> <a href="/bocker/index/<%=bok['id']%>"><%= bok['name'] %></a></h2>
       <% end%>
-    <p><a href="/index">Show me all bocker!</a></p>
+    <p><a href="/bocker/index">Show me all bocker!</a></p>
      <button type='submit'>
-    <p><a href="/bocker/index/new">Add another book</a></p> </button> </form>
+    <p><a href="/bocker/new">Add another book</a></p> </button> </form>
   <% else %>
     <p>No books found.</p>
   <% end %>
