--- a/src/views/bocker/index.erb
+++ b/src/views/bocker/index.erb
@@ -15,7 +15,7 @@
           <h2> <%= bok['name'] %> </h2>
           <p>Author: <%= bok['Author'] %></p>
           <p>Description: <%= bok['description'] %></p>
-          <p><a href="/comment/new">Add your comment and rating of the book!</a></p>
+          <p><a href="/comments/new">Add your comment and rating of the book!</a></p>
       <% end%>
     <p><a href="/bocker/index">Show me all bocker!</a></p>
   <% else %>
