--- a/src/views/bocker/index.erb
+++ b/src/views/bocker/index.erb
@@ -16,7 +16,12 @@
           <p>Author: <%= bok['Author'] %></p>
           <p>Description: <%= bok['description'] %></p>
           <p><a href="/comments/new">Add your comment and rating of the book!</a></p>
-      <% end%>
+          <%# <% @comments.each do |comment|%>
+              <%# <p> <%= Name['username'] </p>
+              <p>Comment: <%= ['comment']</p>
+              <p>Rating: <%= ['rating']</p> %>
+          <%# <% end%> 
+      <% end
     <p><a href="/bocker/index">Show me all bocker!</a></p>
   <% else %>
     <p>No books found.</p>
