--- a/src/views/comments/new.erb
+++ b/src/views/comments/new.erb
@@ -1,21 +1,23 @@
+<body>
+    <main>
+        <form class="formbox" action="comments/new" method="post">
+            <label for="name">Name:</label><input type="text" id="username" name="username" ><br />
+            <label for="name">Comment:</label><input type="text" id="comment" name="comment" ><br />   
+            <div class="button">
+                <button type="submit" value="submit">Add the comment</button>
+            </div>
 
-<form class="formbox" action="comment/new" method="post">
-    <label for="name">Name:</label><input type="text" id="username" name="username" ><br />
-    <label for="name">Comment:</label><input type="text" id="comment" name="comment" ><br />   
-    <div class="button">
-        <button type="submit" value="submit">Add the comment</button>
-    </div>
+            <div>
+                Rate this book:
+                1 <input type="radio" name="rating" value="1" />
+                2 <input type="radio" name="rating" value="2" />
+                3 <input type="radio" name="rating" value="3" />
+                4 <input type="radio" name="rating" value="4" />
+                5 <input type="radio" name="rating" value="5" /><button type='submit'>Add the rating</button> </form>
+            </div> 
 
-    <div>
-        Rate this book:
-        1 <input type="radio" name="rating" value="1" />
-        2 <input type="radio" name="rating" value="2" />
-        3 <input type="radio" name="rating" value="3" />
-        4 <input type="radio" name="rating" value="4" />
-        5 <input type="radio" name="rating" value="5" /><button type='submit'>Add the rating</button> </form>
-    </div> 
-
-    <div class="message"></div>
-</form>
-
+            <div class="message"></div>
+        </form>
+    </main>
+</body>
 
