--- a/src/views/signup.erb
+++ b/src/views/signup.erb
@@ -6,10 +6,10 @@
                 <label for="mail">Email:</label><input type="email" id="mail" name="user_email" ><br />
                 <label for="password">Lösenord:</label><input type="Password" id="password" name="password" ><br />
                 
-                <select name="status" id="">
+                <%# <select name="status" id="">
                     <option value="user">User</option>
                     <option value="admin">Admin</option>
-                </select>
+                </select> %>
                     
                 <div class="button">
                     <button type="submit" value="submit">Create account</button>
