--- a/src/views/userpage.erb
+++ b/src/views/userpage.erb
@@ -1,1 +1,7 @@
 <h1>Hello <%=@user["name"]%></h1>
+<form class="formbox" action="/logout" method="post">
+    <div class="button">
+        <button type="submit" value="submit">Log out</button>
+    </div>
+    <div class="message"></div>
+</form>
