--- a/src/views/signup.erb
+++ b/src/views/signup.erb
@@ -2,7 +2,7 @@
     <main>
         <h4>Skapa ditt konto</h4>
         <form class="formbox" action="/signup" method="post">
-                <label for="name">Name:</label><input type="text" id="name" name="user_name" ><br />
+                <label for="name">Name:</label><input type="text" id="name" name="name" ><br />
                 <label for="mail">Email:</label><input type="email" id="mail" name="user_email" ><br />
                 <label for="password">Lösenord:</label><input type="Password" id="password" name="password" ><br />
                 
